# COMO-CC

./: .gitignore  pyproject.toml
.github/workflows/: container_build.yml  unit_tests.yml
main/: COMO.ipynb
main/como/: GSEpipeline.py  GSEpipelineFast.py  __init__.py  cluster_rnaseq.py  combine_distributions.py  create_context_specific_model.py  disease_analysis.py  instruments.py  knock_out_simulation.py  merge_xomics.py  microarray_gen.py  project.py  proteomics_gen.py  rnaseq_gen.py  rnaseq_preprocess.py
main/como/rscripts/: rnaseq.R
main/src/: knock_out_simulation.py  merge_xomics.py
main/tests/: test_execution.py  test_project.py
